[package]
name = "deadball"
version = "0.4.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
text-colorizer = "1"
eframe = "0.29.0"
egui_extras = { version = "0.29.0", features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png"] }
egui_file = "0.19"
egui-toast = "0.15.0"
egui_dnd = "0.10.0"
